--- a/style.css
+++ b/style.css
@@ -1,1 +1,96 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 
+body {
+    background: url("image/electric.jpg");
+}
+
+.question {
+    font-family: roboto mono;
+    display: block;
+    max-width: 500px;
+    color: white;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 600;
+    margin: 150px auto 75px auto;
+    background-color: #0be6b760;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 2px 6px 8px#0be6b6;
+}
+
+.options {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+}
+
+.options button {
+    background-color: #0b87e69c;
+    color: white;
+    font-family: roboto mono;
+    text-align: center;
+    display: block;
+    width: 100%;
+    max-width: 800px;
+    padding: 15px;
+    font-size: 15px;
+    border-color: #0be6b6;
+    border-width: 3px;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 25px;
+}
+
+.options button:hover {
+    background-color: #0be6b7;
+    box-shadow: 5px 5px 8px #0be6b6;
+    color: black;
+}
+
+.container-button {
+    text-align: end;
+    margin-right: 500px;
+}
+
+.container-button button {
+    font-family: roboto mono;
+    width: 100%;
+    max-width: 125px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 35px;
+    padding: 14px;
+    font-size: 15px;
+    color: rgb(255, 255, 255);
+    background-color: #0be6b760;
+    border-width: 3px;
+    border-color: #0be6b6;
+    border-radius: 15px;
+}
+
+button #next-button {
+    .button font-family roboto mono;
+    width: 100%;
+    max-width: 125px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 35px;
+    padding: 14px;
+    font-size: 15px;
+    color: rgb(255, 255, 255);
+    background-color: #0be6b760;
+    border-width: 3px;
+    border-color: #0be6b6;
+    border-radius: 15px;
+}
+
+button#next-button:hover {
+    background-color: #0be6b760;
+    box-shadow: 2px 6px 8px#0be6b6;
+    color: white;
+}
+
+button#next-button:active {
+    box-shadow: 5px 5px 8px #c6cbb0;
+}
