--- a/style.css
+++ b/style.css
@@ -1,20 +1,31 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 
 body {
+  margin: 0;
+  /* on retire la marge du body à 8px par défaut */
+  height: 100vh;
   background: url("image/electric.jpg");
+}
+
+#container-quiz {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .question {
   font-family: roboto mono;
   display: block;
-  max-width: 500px;
+  max-width: 80%;
   color: white;
   text-align: center;
-  font-size: 35px;
+  font-size: 25px;
   font-weight: 600;
-  margin: 150px auto 75px auto;
+  margin: 0px auto 75px auto;
   background-color: #0be6b760;
-  padding: 20px;
+  padding: 15px;
   border-radius: 15px;
   box-shadow: 2px 6px 8px#0be6b6;
 }
@@ -41,19 +52,39 @@ body {
   margin-right: auto;
   margin-bottom: 25px;
   cursor: pointer;
+  transition: background-color 0.5s, transform 0.5s;
 }
 
 .options button:hover {
   background-color: #0be6b7;
   box-shadow: 5px 5px 8px #0be6b6;
   color: black;
-  font-size: 16px;
-  transition: background-color 0.5s, font-size 0.5s;
+  /* font-size: 16px; */
+  transform: scale(1.05);
+}
+
+.options button:active {
+  transform: scale(0.95);
+}
+
+.options button.selected-option {
+  background-color: #0be6be9c;
+  box-shadow: 5px 5px 5px #c6cbb0;
+}
+
+.results-box {
+  background-color: white;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 15px;
+  padding: 10px;
+  margin: 10px auto;
 }
 
 .container-button {
   text-align: end;
-  margin-right: 500px;
+  margin-left: 500px;
+  height: 100px;
+  /* hauteur définie pour qu'il compte dans le centrage du flex */
 }
 
 .container-button button {
