--- a/style.css
+++ b/style.css
@@ -80,11 +80,18 @@ body {
 }
 
 .results-box {
-  background-color: white;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 15px;
-  padding: 10px;
-  margin: 10px auto;
+  background-color: #0b87e69c;
+  color: white;
+  font-family: roboto Mono;
+  text-align: center;
+  display: block;
+  width: 800px;
+  max-width: 100%;
+  border: 3px solid #0be6b6;
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 5%;
+  max-width: 100%;
 }
 
 .container-button {
