remise au propre

--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body {
 }
 
 .options button {
-  background-color: #0be6b6;
-  color: black;
+  background-color: #0b87e69c;
+  color: white;
   font-family: roboto mono;
   text-align: center;
   display: block;
